fix covered popup

--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -234,7 +234,6 @@ dl {
 
     > * {
         position: relative;
-        z-index: 1;
     }
 
     &:before {
@@ -248,6 +247,7 @@ dl {
         background: url('~@/assets/images/common-box-corner.png') no-repeat;
         background-size: cover;
         background-position: left center;
+        position: relative;
     }
 
     &:after {
@@ -261,6 +261,7 @@ dl {
         background: url('~@/assets/images/common-box-corner.png') no-repeat;
         background-size: cover;
         background-position: right center;
+        position: relative;
     }
 }
 
