--- a/src/components/ScaleGroup/index.less
+++ b/src/components/ScaleGroup/index.less
@@ -36,7 +36,7 @@
                 position: absolute;
                 width: 20%;
                 height: 150%;
-                left: -5%;
+                left: -5px;
                 top: 50%;
                 transform: translateY(-50%);
                 background: url('../../assets/images/mint-focus.png') no-repeat;
@@ -48,7 +48,7 @@
                 position: absolute;
                 width: 20%;
                 height: 150%;
-                right: -5%;
+                right: -5px;
                 top: 50%;
                 transform: translateY(-50%);
                 background: url('../../assets/images/mint-focus.png') no-repeat;
